--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -90,11 +90,13 @@ img {
   background-color: #ffffff;
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
           box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 .l-header-inner {
   max-width: 1280px;
-  height: 80px;
+  height: 100%;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -105,6 +107,8 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 .l-main-side {
@@ -494,6 +498,11 @@ a.next.page-numbers {
 .p-footer-nav__item a {
   color: #ffffff;
   font-weight: bold;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+.p-footer-nav__item a:hover {
+  text-shadow: 2px 2px 10px #c8c8c8, -2px 2px 10px #c8c8c8, 2px -2px 10px #c8c8c8, -2px -2px 10px #c8c8c8;
 }
 .p-footer-nav__item:not(:last-child) {
   border-bottom: 1px solid #ffffff;
@@ -537,8 +546,29 @@ a.next.page-numbers {
 .p-footer-bottom__item:not(:last-child) {
   border-right: 1px solid #000000;
 }
+.p-footer-bottom__item a {
+  font-size: max(0.75rem, 3.8vw);
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+.p-footer-bottom__item a:hover {
+  text-shadow: 2px 2px 10px #c8c8c8, -2px 2px 10px #c8c8c8, 2px -2px 10px #c8c8c8, -2px -2px 10px #c8c8c8;
+}
+
 .l-footer-copy {
   text-align: center;
+}
+@media screen and (min-width:480px) {
+  .p-footer-bottom__item {
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+  }
+  .p-footer-bottom__item:not(:last-child) {
+    border-right: 1px solid #000000;
+  }
+  .p-footer-bottom__item a {
+    font-size: 1rem;
+  }
 }
 @media screen and (min-width:860px) {
   .p-footer-nav__list {
@@ -624,11 +654,11 @@ a.next.page-numbers {
 .p-header-nav {
   position: fixed;
   background-color: #ffffff;
-  top: 80px;
+  top: 0;
   right: 0;
   right: -320px;
   width: 320px;
-  height: calc(100vh - 80px);
+  height: 100vh;
   padding-top: 1.5rem;
   padding-right: 1rem;
   padding-bottom: 1.5rem;
@@ -651,13 +681,14 @@ a.next.page-numbers {
 .p-header-nav__item:not(:last-child) {
   margin-bottom: 1.5rem;
   padding-bottom: 1rem;
-  border-bottom: 2px solid #000000;
+  border-bottom: 2px dotted #000000;
 }
 .p-header-nav__item:not(:last-child) a {
   display: inline-block;
-  width: 175px;
   padding-right: 0.5rem;
   padding-left: 0.5rem;
+  -webkit-transition: color 1s;
+  transition: color 1s;
   position: relative;
   display: inline-block;
   text-decoration: none;
@@ -672,27 +703,27 @@ a.next.page-numbers {
   background: #00B906;
   -webkit-transform: scale(0, 1);
           transform: scale(0, 1);
-  -webkit-transform-origin: right top;
-          transform-origin: right top;
+  -webkit-transform-origin: top top;
+          transform-origin: top top;
   -webkit-transition: -webkit-transform 0.5s;
   transition: -webkit-transform 0.5s;
   transition: transform 0.5s;
   transition: transform 0.5s, -webkit-transform 0.5s;
 }
 .p-header-nav__item:not(:last-child) a:hover::after {
-  -webkit-transform-origin: left top;
-          transform-origin: left top;
+  -webkit-transform-origin: top top;
+          transform-origin: top top;
   -webkit-transform: scale(1, 1);
           transform: scale(1, 1);
 }
 .p-header-nav__item:not(:last-child) a::after {
   z-index: -1;
-  bottom: -1rem;
-  height: 4rem;
-  -webkit-transition: -webkit-transform 1.5s;
-  transition: -webkit-transform 1.5s;
-  transition: transform 1.5s;
-  transition: transform 1.5s, -webkit-transform 1.5s;
+  bottom: -0.1rem;
+  height: 1.6rem;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s;
 }
 .p-header-nav__item:not(:last-child) a:hover {
   color: #ffffff;
@@ -705,6 +736,7 @@ a.next.page-numbers {
   color: #ffffff;
   background-color: #00B906;
   border-radius: 5px;
+  line-height: 3.5rem;
   -webkit-box-shadow: 2px 2px 5px #2C3848;
           box-shadow: 2px 2px 5px #2C3848;
   border: 2px solid #00B906;
@@ -755,7 +787,7 @@ a.next.page-numbers {
 
   .p-header-nav {
     position: static;
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0);
     top: inherit;
     right: 0;
     right: -320px;
@@ -789,12 +821,12 @@ a.next.page-numbers {
   }
   .p-header-nav__item:not(:last-child) a {
     width: auto;
-    padding-right: 0.8rem;
-    padding-left: 0.8rem;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
   }
   .p-header-nav__item:not(:last-child) a::after {
-    bottom: -1.9rem;
-    height: 5rem;
+    bottom: -0.15rem;
+    height: 1.5rem;
   }
   .p-header-nav__item a {
     font-size: 1.2rem;
@@ -1202,6 +1234,7 @@ a.next.page-numbers {
 }
 .p-detail td {
   line-height: 1.2;
+  text-transform: none;
 }
 
 .p-detail-explain__ttl {
@@ -1293,6 +1326,7 @@ a.next.page-numbers {
 }
 .p-intro-cont__inner p {
   color: #ffffff;
+  line-height: 1.2;
 }
 
 @media screen and (min-width:480px) {
@@ -1371,7 +1405,7 @@ a.next.page-numbers {
   -webkit-box-shadow: 5px 5px 10px #2C3848;
           box-shadow: 5px 5px 10px #2C3848;
   margin-bottom: 0.125rem;
-  opacity: 0.7;
+  text-shadow: 1px 1px 1px #2C3848;
 }
 .p-menu-btn a span {
   font-size: 0.75rem;
@@ -1687,6 +1721,14 @@ a.next.page-numbers {
 
 .is-menu__open {
   right: 0;
+}
+
+.is-header__op06 {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.is-header__h65 {
+  height: 4.0625rem;
 }
 
 .u-mb__24 {
