--- a/scss/layout/_l-header.scss
+++ b/scss/layout/_l-header.scss
@@ -8,15 +8,17 @@
     padding-left: 0.5rem;
     background-color: $white;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    transition: 0.5s ease-in-out;
 }
 
 .l-header-inner {
     max-width: 1280px;
-    height: 80px;
+    height: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: 0.5s ease-in-out;
 }
 
 
