--- a/scss/object/project/front-page/_p-footer.scss
+++ b/scss/object/project/front-page/_p-footer.scss
@@ -20,6 +20,7 @@
     a {
         color: $white;
         font-weight: bold;
+        @include txt-shadow;
     }
 
     &:not(:last-child) {
@@ -48,7 +49,9 @@
     &:not(:last-child) {
         margin-right: 2rem;
     }
-    a {}
+    a {
+        
+    }
 }
 
 .p-footer-sns__icon {
@@ -69,7 +72,10 @@
     &:not(:last-child) {
         border-right: 1px solid $black;
     }
-    a {}
+    a {
+        font-size:max(rem(12), 3.8vw);
+        @include txt-shadow;
+    }
 }
 
 .l-footer-copy {
@@ -77,6 +83,18 @@
     small {}
 }
 
+@include mq (sp) {
+    .p-footer-bottom__item {
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+        &:not(:last-child) {
+            border-right: 1px solid $black;
+        }
+        a {
+            font-size: 1rem;
+        }
+    }
+}
 @include mq () {
     .p-footer-nav__list {
         display: flex;
