--- a/scss/object/project/front-page/_p-header.scss
+++ b/scss/object/project/front-page/_p-header.scss
@@ -12,11 +12,11 @@
 .p-header-nav {
     position: fixed;
     background-color: $white;
-    top: 80px;
+    top: 0;
     right: 0;
     right: -320px;
     width:  320px;
-    height: calc(100vh - 80px);
+    height: 100vh;
     padding-top: rem(24);
     padding-right: 1rem;
     padding-bottom: rem(24);
@@ -36,18 +36,19 @@
     &:not(:last-child) {
         margin-bottom: 1.5rem;
         padding-bottom: 1rem;
-        border-bottom: 2px solid $black;
+        border-bottom: 2px dotted $black;
         a {
             display: inline-block;
-            width: 175px;
+            // width: 175px;
             padding-right: 0.5rem;
             padding-left: 0.5rem;
+            transition: color 1s;
             @include txt-border($green);
             &::after {
                 z-index: -1;
-                bottom: -1rem;
-                height: rem(64);
-                transition: transform 1.5s;
+                bottom: -0.1rem;
+                height: 1.6rem;
+                transition: transform 1s;
             }
             &:hover {
                 color: $white;
@@ -61,6 +62,7 @@
             color: $white;
             background-color: $green;
             border-radius: 5px;
+            line-height: calc(3.75rem - rem(4));
             @include btn-anime-2;
         }
     }
@@ -109,7 +111,7 @@
 
     .p-header-nav {
         position: static;
-        background-color: $white;
+        background-color: rgba(255, 255, 255, 0);
         top: inherit;
         right: 0;
         right: -320px;
@@ -136,11 +138,11 @@
             border-bottom: none;
             a {
                 width: auto;
-                padding-right: 0.8rem;
-                padding-left: 0.8rem;
+                padding-right: 0.5rem;
+                padding-left: 0.5rem;
                 &::after {
-                    bottom: -1.9rem;
-                    height: 5rem;
+                    bottom: -0.15rem;
+                    height: 1.5rem;
                 }
             }
         }
