--- a/scss/object/utility/_js.scss
+++ b/scss/object/utility/_js.scss
@@ -13,6 +13,7 @@
     opacity: 0;
 }
 
+//ハンバーガー////////////////////////
 .is-btn__active {
     span {
         top: 0;
@@ -49,4 +50,14 @@
 //トップメニュー////////////////////
 .is-menu__open{
     right: 0;
+}
+
+//header変形グループ//////////////////
+
+.is-header__op06 {
+    background-color: rgba(255, 255, 255, 0.6);
+}
+
+.is-header__h65 {
+    height: rem(65);
 }
