--- a/scss/object/project/front-page/_p-header.scss
+++ b/scss/object/project/front-page/_p-header.scss
@@ -3,9 +3,13 @@
 .p-header-logo {
     width: 80px;
     height: 52px;
+    @include opa (0.8);
 }
 
 .p-header-logo__img {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
     img {}
 }
 
