--- a/scss/object/project/front-page/_p-header.scss
+++ b/scss/object/project/front-page/_p-header.scss
@@ -43,19 +43,18 @@
         border-bottom: 2px dotted $black;
         a {
             display: inline-block;
-            // width: 175px;
             padding-right: 0.5rem;
             padding-left: 0.5rem;
             transition: color 1s;
             @include txt-border($green);
             &::after {
                 z-index: -1;
-                bottom: -0.1rem;
-                height: 1.6rem;
+                bottom: -0.25rem;
+                height: 0.8rem;
                 transition: transform 1s;
             }
             &:hover {
-                color: $white;
+                color: $d-green;
             }
         }
     }
@@ -138,15 +137,16 @@
         font-size: 1rem;
         &:not(:last-child) {
             margin-bottom: 0;
+            margin-right: 1rem;
             padding-bottom: 0;
             border-bottom: none;
             a {
                 width: auto;
-                padding-right: 0.5rem;
-                padding-left: 0.5rem;
+                padding-right: 0;
+                padding-left: 0;
                 &::after {
-                    bottom: -0.15rem;
-                    height: 1.5rem;
+                    bottom: -0.25rem;
+                    height: 0.8rem;
                 }
             }
         }
