--- a/scss/object/project/single-recipe/_p-swiper.scss
+++ b/scss/object/project/single-recipe/_p-swiper.scss
@@ -14,12 +14,13 @@
 }
 
 .p-swiper-img {
-    padding-top: 0;
-    height: 300px;
+    overflow: hidden;
     img {
+        height: 300px;
     }
 }
 //swiper.css///////////////
+
 .swiper-wrapper {
     height: 300px;
     overflow: hidden;
