--- a/scss/object/component/_c-sec-ttl.scss
+++ b/scss/object/component/_c-sec-ttl.scss
@@ -14,6 +14,27 @@
     }
 }
 
+@include mq (sp) {
+    .c-sec-ttl {
+        margin-bottom: rem(48);
+    }
+}
 @include mq () {
-    
+    .c-sec-ttl {
+        margin-bottom: rem(64);
+        h3 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 0.5rem;
+        }
+        p {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+    }
+}
+@include mq (pc) {
+    .c-sec-ttl {
+        margin-bottom: rem(80);
+    }
 }
