--- a/scss/object/project/single-recipe/_p-detail.scss
+++ b/scss/object/project/single-recipe/_p-detail.scss
@@ -9,20 +9,28 @@
         width: 100%;
         height: 235px;
         max-width: 900px;
+        max-height: 500px;
         margin: 0 auto;
         margin-bottom: rem(48);
     }
+    p{
+        display: inline-block;
+        margin: 0 auto;
+        color: $white;
+        background-color: $navy;
+        padding: 0.5rem;
+    }
     table {
         background-color: $l-green;
-        width: calc(100% - 2rem);
+        width: 100%;
         max-width: 600px;
         margin: 0 auto;
         padding: 1.5rem ;
+        border-collapse: separate;       //padding無効の対処
         &:first-of-type {
             margin-bottom: rem(48);
         }
     }
-    
     tbody {
     }
     tr {
@@ -41,18 +49,24 @@
 
 .p-detail-ttl{}
 
-.p-detail-explain__ttl {
+.p-detail-explain__inner {
     display: block;
-    width: calc(100% - 2rem);
+    width: calc(100%);
+    padding-right: 1rem;
+    padding-left: 1rem;
     max-width: 600px;
     margin: 0 auto;
-    p{
-        display: inline-block;
-        color: $white;
-        background-color: $navy;
-        padding: 0.5rem;
-    }
 }
+
+// .p-detail-explain__ttl {
+//     
+//     p{
+//         display: inline-block;
+//         color: $white;
+//         background-color: $navy;
+//         padding: 0.5rem;
+//     }
+// }
 
 @include mq (sp) {
     .p-detail {
@@ -63,7 +77,6 @@
         }
         table {
             background-color: $l-green;
-            width: calc(100% - 2rem);
             max-width: 600px;
             margin: 0 auto;
             padding: 1.5rem ;
