--- a/scss/object/project/single-recipe/_p-intro.scss
+++ b/scss/object/project/single-recipe/_p-intro.scss
@@ -21,6 +21,10 @@
     padding: 0.5rem;
     p {
         color: $green;
+        &::before {
+            content: "Style";
+            font-size: 1.5rem;
+        }
     }
 }
 
