とりあえず

--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -1117,7 +1117,7 @@ a.next.page-numbers {
   display: flex;
   -webkit-box-align: end;
       -ms-flex-align: end;
-          align-items: end;
+          align-items: flex-end;
   background-color: #298800;
   color: #ffffff;
   font-size: min(0.875rem, 3.75vw);
@@ -1143,9 +1143,6 @@ a.next.page-numbers {
 .p-recipe-tab p {
   margin-left: auto;
   text-align: end;
-}
-.p-recipe-tab p span:last-child {
-  margin-left: 1rem;
 }
 
 .p-recipe-cont {
@@ -1175,8 +1172,8 @@ a.next.page-numbers {
 }
 
 .p-recipe-cont__item-inner:hover .p-recipe-img__inner {
-  -webkit-transform: scale(0.95);
-          transform: scale(0.95);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 .p-recipe-cont__item-inner:hover .p-recipe-txt {
   opacity: 0.5;
@@ -1219,14 +1216,20 @@ a.next.page-numbers {
 .p-recipe-tag {
   left: 0;
   bottom: 1rem;
-  font-size: 2rem;
-  color: #ffffff;
   background-color: #298800;
   padding-top: 0.25rem;
   padding-right: 1rem;
   padding-bottom: 0.25rem;
   padding-left: 1rem;
   border-radius: 0 0.5rem 0 0;
+}
+.p-recipe-tag p {
+  font-size: 1rem;
+  color: #ffffff;
+}
+.p-recipe-tag p::before {
+  content: "Style";
+  font-size: 2rem;
 }
 
 .p-recipe-coming {
@@ -1252,16 +1255,11 @@ a.next.page-numbers {
 
 .p-recipe-txt__ttl {
   font-size: 1.375rem;
+  line-height: 1.2;
 }
 
 @media screen and (min-width:480px) {
   .p-recipe-tab {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: end;
     font-size: 1.25rem;
   }
   .p-recipe-tab:nth-child(4) p {
@@ -1270,36 +1268,13 @@ a.next.page-numbers {
   .p-recipe-tab:not(:last-child) {
     margin-right: 0.25rem;
   }
-  .p-recipe-tab p {
-    margin-left: auto;
-    text-align: end;
-  }
-  .p-recipe-tab p span:last-child {
-    margin-left: 1rem;
-  }
 }
 @media screen and (min-width:860px) {
   .p-recipe-tab {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: end;
     font-size: 1.5rem;
   }
   .p-recipe-tab:nth-child(4) p {
     width: 6.625rem;
-  }
-  .p-recipe-tab:not(:last-child) {
-    margin-right: 0.25rem;
-  }
-  .p-recipe-tab p {
-    margin-left: auto;
-    text-align: end;
-  }
-  .p-recipe-tab p span:last-child {
-    margin-left: 1rem;
   }
 
   .p-recipe-cont__list {
@@ -1314,9 +1289,7 @@ a.next.page-numbers {
     margin: 0 auto;
     width: calc((100% - 2rem) / 2);
     max-width: 400px;
-  }
-  .p-recipe-cont__item:nth-last-child(2) {
-    margin-bottom: 0;
+    margin-bottom: 3.5rem;
   }
 }
 .p-detail {
@@ -1364,6 +1337,8 @@ a.next.page-numbers {
 .p-detail td {
   line-height: 1.2;
   text-transform: none;
+  text-indent: -1em;
+  padding-left: 1em;
 }
 
 .p-detail-explain {
@@ -1382,6 +1357,15 @@ a.next.page-numbers {
   padding-left: 1rem;
   max-width: 600px;
   margin: 0 auto;
+}
+
+#glsr_9be16351 {
+  margin-bottom: 2rem;
+}
+
+.glsr-review-author {
+  width: 100%;
+  margin-bottom: 0.5rem;
 }
 
 .glsr-no-margins {
@@ -1410,6 +1394,21 @@ a.next.page-numbers {
   color: #00B906;
   -webkit-box-shadow: 3px 3px 10px #2C3848;
           box-shadow: 3px 3px 10px #2C3848;
+}
+
+.glsr .glsr-reviews-wrap .glsr-reviews {
+  gap: 1rem;
+}
+
+.glsr-reviews-wrap {
+  padding-top: 1rem;
+  padding-left: 1rem;
+}
+
+.glsr-review {
+  border-bottom: 2px dotted #000000;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
 }
 
 @media screen and (min-width:480px) {
