--- a/scss/object/project/front-page/_p-recipe.scss
+++ b/scss/object/project/front-page/_p-recipe.scss
@@ -22,7 +22,7 @@
 
 .p-recipe-tab {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     background-color: $d-green;
     color: $white;
     font-size: min(0.875rem, 3.75vw);
@@ -48,11 +48,6 @@
     p {
         margin-left: auto;
         text-align: end;
-        span {
-            &:last-child {
-                margin-left: 1rem;
-            }
-        }
     }
 }
 
@@ -83,7 +78,7 @@
 .p-recipe-cont__item-inner {
     &:hover {
         .p-recipe-img__inner {
-            transform: scale(0.95);
+            transform: scale(1.05);
         }
         .p-recipe-txt {
             opacity: 0.5;
@@ -126,14 +121,20 @@
 .p-recipe-tag {
     left: 0;
     bottom: 1rem;
-    font-size: 2rem;
-    color: $white;
     background-color: $d-green;
     padding-top: rem(4);
     padding-right: 1rem;
     padding-bottom: rem(4);
     padding-left: 1rem;
     border-radius: 0 0.5rem 0 0;
+    p {
+        font-size: 1rem;
+        color: $white;
+        &::before {
+            content: "Style";
+            font-size: 2rem;
+        }
+    }
 }
 
 .p-recipe-coming {
@@ -158,12 +159,11 @@
 
 .p-recipe-txt__ttl {
     font-size: rem(22);
+    line-height: 1.2;
 }
 
 @include mq (sp) {
     .p-recipe-tab {
-        display: flex;
-        align-items: end;
         font-size: rem(20);
         &:nth-child(4) {
             p {
@@ -173,38 +173,15 @@
         &:not(:last-child) {
             margin-right: 0.25rem;
         }
-        p {
-            margin-left: auto;
-            text-align: end;
-            span {
-                &:last-child {
-                    margin-left: 1rem;
-                }
-            }
-        }
     }
 }
 
 @include mq () {
     .p-recipe-tab {
-        display: flex;
-        align-items: end;
         font-size: rem(24);
         &:nth-child(4) {
             p {
                 width: rem(106);
-            }
-        }
-        &:not(:last-child) {
-            margin-right: 0.25rem;
-        }
-        p {
-            margin-left: auto;
-            text-align: end;
-            span {
-                &:last-child {
-                    margin-left: 1rem;
-                }
             }
         }
     }
@@ -218,8 +195,6 @@
         margin: 0 auto;
         width: calc((100% - 2rem) /2);
         max-width: 400px;
-        &:nth-last-child(2) {
-            margin-bottom: 0;
-        }
+        margin-bottom: rem(56);
     }
 }
