--- a/scss/layout/_l-header.scss
+++ b/scss/layout/_l-header.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
 .l-header {
-    position: fixed;
+    position: absolute;
     width: 100vw;
     height: 80px;
     padding-right: 0.5rem;
@@ -23,6 +23,7 @@
     align-items: center;
     transition: 0.5s ease-in-out;
 }
+
 
 
 
