--- a/scss/object/component/_c-breadcrumb.scss
+++ b/scss/object/component/_c-breadcrumb.scss
@@ -1,13 +1,13 @@
 @use "global" as *;
 
 .c-breadcrumb {
-    background-color: $gray;
+    background-color: $green;
     padding-left: 1rem;
     padding-right: 1rem;
 }
 
 .c-breadcrumb-inner {
-    max-width: 900px;
+    max-width: 1450px;
     margin: 0 auto;
     padding-top: 1.1875rem;
     padding-bottom: 1.1875rem;
@@ -17,16 +17,16 @@
 }
 
 .breadcrumbs {
+    color: $white;
     span {
         line-height: 1.5;
     }
     .home,
     .category,
     .archive{
+        color: $white;
         position: relative;
         font-size: 0.75rem;
-        transition: 0.5s ease-in;
-        border-bottom: 1px solid #000;
         &:hover {
             border-bottom: 1px solid rgb(255, 255, 255);
         }
@@ -34,5 +34,18 @@
     .current-item {
         font-size: 0.75rem;
         border-bottom: 1px solid rgb(255, 255, 255);
+    }
+}
+
+@include mq (sp) {
+    .breadcrumbs {
+        .home,
+        .category,
+        .archive{
+            font-size: 1rem;
+        }
+        .current-item {
+            font-size: 1rem;
+        }
     }
 }
